--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     download: true,
     dynamicTyping: true,
     complete: function(results) {
-      console.log("Parsing complete:", results);
+      console.log("Parsing complete:", results.data);
     }
   });
 </script>
