--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     dynamicTyping: true,
     header: true,
     complete: function(results) {
-      console.log("Parsing complete:", results.data);
+      console.log("Parsing complete:", results.data[0]["prayer date"]);
     }
   });
 </script>
