--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     dynamicTyping: true,
     header: true,
     complete: function(results) {
-      console.log("Parsing complete:", results.data[0]["prayer date"]);
+      console.log("Parsing complete: Full Result", rsults.data);
+      console.log("Parsing complete: first object", results.data[0]["prayer_date"]);
     }
   });
 </script>
