--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     complete: function(results) {
       console.log("Parsing complete: Full Result", results.data);
       console.log("Parsing complete: first object", results.data[0]["prayer_date"]);
+      document.getElementById("dnt").innerHTML = results.data[0]["fajr_azaan"]
     }
   });
 </script>
 Hello World.
+<p id="test"></p>
 </body>
 </html>
