--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
   Hello World.
   <p id="test"></p>
+  <p id="id1"></p>
 <script>
+  var dataString = "March 09, 2016";
   Papa.parse("data.csv", {
     download: true,
     dynamicTyping: true,
@@ -15,9 +17,27 @@
     complete: function(results) {
       console.log("Parsing complete: Full Result", results.data);
       console.log("Parsing complete: first object", results.data[0]["prayer_date"]);
-      document.getElementById("test").innerHTML = results.data[68]["isha_azaan"]
+      document.getElementById("test").innerHTML = results.data[68]["isha_azaan"];
+      dataString = dataString + " " + results.data[68]["isha_azaan"];
     }
   });
+  
+  var newDate = new Date(dataString);
+
+  var hour = newDate.getHours();
+  var minutes = newDate.getMinutes();
+  var timeSuffix = "AM";
+  function checkHours(i) {
+    if (i > 12) {
+	    i = i - 12;
+      timeSuffix = "PM";
+      return i;
+    }
+  }
+
+  hour = checkHours(hour);
+
+  document.getElementById('id1').innerHTML = hour + ":" + minutes + " " + timeSuffix;
 </script>
 </body>
 </html>
