--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       dataString = dataString + " " + results.data[68]["isha_azaan"];
     }
   });
-  
+  console.log(dataString);
   var newDate = new Date(dataString);
 
   var hour = newDate.getHours();
