--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p id="test"></p>
   <p id="id1"></p>
 <script>
-  var dataString = "March 09, 2016";
+  dataString = "March 09, 2016";
   Papa.parse("data.csv", {
     download: true,
     dynamicTyping: true,
