--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     download: true,
     dynamicTyping: true,
     header: true,
-    complete: callBack(results);
+    complete: callBack(results)
   });
   function callBack(results) {
       console.log("Parsing complete: Full Result", results.data);
