--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.js"></script>
 </head>
 <body>
-  Hello World.
-  <p id="test"></p>
-  <p id="id1"></p>
+  Fajr <div id='fajr'></div>
+  Sunrise <div id='sunrise'></div>
+  Dhuhr <div id='dhuhr'></div>
+  Asr <div id='asr'></div>
+  Maghrib <div id='maghrib'></div>
+  Isha <div id='isha'></div>
+
 <script>
   var dataString = "March 09, 2016";
   Papa.parse("data.csv", {
@@ -15,27 +19,43 @@
     dynamicTyping: true,
     header: true,
     complete: function(results) {
-      console.log("Parsing complete: Full Result", results.data);
-      console.log("Parsing complete: first object", results.data[0]["prayer_date"]);
-      document.getElementById("test").innerHTML = results.data[68]["isha_azaan"];
-      dataString = dataString + " " + results.data[68]["isha_azaan"];
-      
+      /*console.log("Parsing complete: Full Result", results.data);
+      console.log("Parsing complete: first object", results.data[0]["prayer_date"]);*/
+
+      var i = 0;
+      var todayDate = function() {
+        var todayDate = new Date();
+        var month = todayDate.getMonth();
+        var day = todayDate.getDay();
+        todayDate = month + "/" + day;
+        return todayDate;
+      }
+      while (i < 367) {
+        if (todayDate == results.data[i][prayer_date]) {
+          x = x + i;
+        } i = i + 1;
+      } console.log(i);
+
+      dataString = dataString + " " + results.data[68]["fajr_azaan"];
+
       var newDate = new Date(dataString);
-
-  var hour = newDate.getHours();
-  var minutes = newDate.getMinutes();
-  var timeSuffix = "AM";
-  function checkHours(i) {
-    if (i > 12) {
-	    i = i - 12;
-      timeSuffix = "PM";
-      return i;
-    }
-  }
-
-  hour = checkHours(hour);
-
-  document.getElementById('id1').innerHTML = hour + ":" + minutes + " " + timeSuffix;
+      var hour = newDate.getHours();
+      var minutes = newDate.getMinutes();
+      var timeSuffix = "AM";
+      function checkHours(i) {
+        if (i > 12) {
+          i = i - 12;
+          timeSuffix = "PM";
+          return i;
+        }
+      }
+      hour = checkHours(hour);
+      document.getElementById('fajr').innerHTML = hour + ":" + minutes + " " + timeSuffix;
+      document.getElementById('sunrise').innerHTML = hour + ":" + minutes + " " + timeSuffix;
+      document.getElementById('dhuhr').innerHTML = hour + ":" + minutes + " " + timeSuffix;
+      document.getElementById('asr').innerHTML = hour + ":" + minutes + " " + timeSuffix;
+      document.getElementById('maghrib').innerHTML = hour + ":" + minutes + " " + timeSuffix;
+      document.getElementById('isha').innerHTML = hour + ":" + minutes + " " + timeSuffix;
     }
   });
 </script>
