--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         return todayDate;
       }
       while (i < 367) {
-        if (todayDate == results.data[i][prayer_date]) {
+        if (todayDate == results.data[i]['prayer_date']) {
           x = x + i;
         } i = i + 1;
       } console.log(i);
