first commit form local

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     dynamicTyping: true,
     header: true,
     complete: function(results) {
-      /*console.log("Parsing complete: Full Result", results.data);
-      console.log("Parsing complete: first object", results.data[0]["prayer_date"]);*/
+      console.log("Parsing complete: Full Result", results.data);
+      console.log("Parsing complete: first object", results.data[0]["prayer_date"]);
 
       var i = 0;
       var todayDate = function() {
