--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         return todayDate;
       }
       while (i < 367) {
-        if (todayDate == results.data[i]['prayer_date']) {
+        x = 0;
+        if (todayDate == results.data[x]['prayer_date']) {
           x = x + i;
         } i = i + 1;
       } console.log(i);
