--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       }
       while (i < 367) {
         x = 0;
-        if (todayDate == results.data[x]['prayer_date']) {
+        if ("03/09" == results.data[x]['prayer_date']) {
           x = x + i;
         } i = i + 1;
       } console.log(i);
