--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       while (i < 367) {
         x = 0;
         if ("03/09" == results.data[x]['prayer_date']) {
-          x = x + i;
+          x = x + i; break;
         } i = i + 1;
       } console.log(i);
 
