--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       while (i < 367) {
         x = 0;
         if ("03/09" == results.data[x]['prayer_date']) {
-          x = x + i; break;
+          console.log(x + i); break;
         } i = i + 1;
       } console.log(i);
 
