--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       }
       while (i < 367) {
         x = 0;
-        if ("03/09" == results.data[x]['prayer_date']) {
-          console.log(x + i); break;
+        if ("03/09" !== results.data[x]['prayer_date']) {
+          x = x + i; break;
         } i = i + 1;
       } console.log(i);
 
