--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         var day = todayDate.getDay();
         todayDate = month + "/" + day;
         return todayDate;
-      }
+      } console.log(todayDate);
       while (i < 367) {
         x = 0;
-        if ("03/09" !== results.data[x]['prayer_date']) {
+        if (todayDate !== results.data[x]['prayer_date']) {
           x = x + i; break;
         } i = i + 1;
       } console.log(i);
