fixed logic, should've been !==

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         var day = todayDate.getDay();
         todayDate = month + "/" + day;
         return todayDate;
-      } console.log(todayDate);
+      }; console.log(todayDate);
       while (i < 367) {
         x = 0;
         if (todayDate !== results.data[x]['prayer_date']) {
