--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
       var i = 0;
       var todayDate = stringDate();
-      function stringDate{
+      function stringDate() {
         var todayDate = new Date();
         var month = todayDate.getMonth();
         var day = todayDate.getDay();
