--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         month = "0" + month;
         var date = todayDate.getDate() + 1;
         date = "0" + date;
-        todayDate = month + "/" + day;
+        todayDate = month + "/" + date;
         return todayDate;
       } console.log(todayDate);
       while (i < 367) {
