--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         var todayDate = new Date();
         var month = todayDate.getMonth() + 1;
         month = "0" + month;
-        var date = todayDate.getDate() + 1;
+        var date = todayDate.getDate();
         date = "0" + date;
         todayDate = month + "/" + date;
         return todayDate;
