--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     complete: function(results) {
       console.log("Parsing complete: Full Result", results.data);
       console.log("Parsing complete: first object", results.data[0]["prayer_date"]);
-      console.log("03/09:", results.data[68]["prayer_date"] == todayDate);
+      console.log("03/09:", results.data[68]["prayer_date"] === todayDate);
 
       var i = 0;
       var todayDate = stringDate();
