--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         date = "0" + date;
         todayDate = month + "/" + date;
         return todayDate;
-      } console.log(todayDate);
+      } console.log(typeof(todayDate));
       while (i < 367) {
         x = 0;
         if (todayDate !== results.data[x]['prayer_date']) {
