--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
     complete: function(results) {
       console.log("Parsing complete: Full Result", results.data);
       console.log("Parsing complete: first object", results.data[0]["prayer_date"]);
-      console.log("03/09:", results.data[68]["prayer_date"] === todayDate);
-      console.log(todayDate);
 
       var i = 0;
       var todayDate = stringDate();
@@ -34,7 +32,8 @@
         date = "0" + date;
         todayDate = month + "/" + date;
         return todayDate;
-      } console.log(typeof(todayDate));
+      } console.log(todayDate);
+      console.log("03/09:", results.data[68]["prayer_date"] === todayDate);
       while (i < 367) {
         x = 0;
         if (todayDate !== results.data[x]['prayer_date']) {
