--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       while (i < 367) {
         x = 0;
         if (todayDate === results.data[x]['prayer_date']) {
-          x = x + i; break;
+          console.log(x + i); break;
         } i = i + 1;
       } console.log(i);
 
