--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       console.log("03/09:", results.data[68]["prayer_date"] === todayDate);
       while (i < 367) {
         x = 0;
-        if (todayDate === results.data[x]['prayer_date']) {
+        if (todayDate === results.data[x]["prayer_date"]) {
           console.log(x + i); break;
         } i = i + 1;
       } console.log(i);
