why is it undefined?

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         } console.log(hour);
       }
       hour = checkHours(hour);
+      console.log(hour + "at the end before innerHTML")
       document.getElementById('fajr').innerHTML = hour + ":" + minutes + " " + timeSuffix;
       document.getElementById('sunrise').innerHTML = hour + ":" + minutes + " " + timeSuffix;
       document.getElementById('dhuhr').innerHTML = hour + ":" + minutes + " " + timeSuffix;
