Woops, forgot to check hours.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           hour = i;
         } console.log(hour);
       }
-
+      checkHours(hour);
       console.log(hour + "at the end before innerHTML")
       document.getElementById('fajr').innerHTML = hour + ":" + minutes + " " + timeSuffix;
       document.getElementById('sunrise').innerHTML = hour + ":" + minutes + " " + timeSuffix;
