one more check.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.js"></script>
 </head>
 <body>
-  Fajr <div id='fajr'></div>
+  <div>Fajr <div id='fajr'></div></div>
   Sunrise <div id='sunrise'></div>
   Dhuhr <div id='dhuhr'></div>
   Asr <div id='asr'></div>
