playing with div alignments.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.js"></script>
 </head>
 <body>
-  <div><div>Fajr</div><div id='fajr'></div></div>
+  Fajr<div id='fajr' style="display: inline-block;"></div>
   Sunrise <div id='sunrise'></div>
   Dhuhr <div id='dhuhr'></div>
   Asr <div id='asr'></div>
