moved init of dataString into the for loop.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             timeSuffix = "PM";
             hour = i;
           } console.log(hour);
+          console.log(i);
         }
         checkHours(hour);
         console.log(hour + "at the end before innerHTML");
