--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             timeSuffix = "PM";
             hour = i;
           } console.log(hour);
-          console.log(i);
+          console.log("this is i " + i);
         }
         checkHours(hour);
         console.log(hour + "at the end before innerHTML");
