forgot to change the access key of salatKey from [0] to [i].

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       for (i = 0; i < 6; i++) {
         var dataString = "March 09, 2016";
-        dataString = dataString + " " + results.data[number_of_days_elapsed][salatKey[0]];
+        dataString = dataString + " " + results.data[number_of_days_elapsed][salatKey[i]];
         console.log(dataString);
         var newDate = new Date(dataString);
         console.log(newDate);
