updated csv with new column sunrise. fixed code a bit.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       // function to iterate over each salat time and write it into DOM.
       // Internal Mohid csv template keys/headers for access of each prayer time.
-      salatKey = ['fajr_azaan', 'sunrise_azaan', 'duhar_azaan', 'asr_azaan', 'maghrib_azaan', 'isha_azaan'];
+      salatKey = ['fajr_azaan', 'sunrise', 'duhar_azaan', 'asr_azaan', 'maghrib_azaan', 'isha_azaan'];
 
       // div Id for element selection.
       salatId = ['fajr', 'sunrise', 'dhuhr', 'asr', 'maghrib', 'isha'];
