Added Bootstrap files for designing and style grid.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
+  <title>Bosnian Islamic Centre Prayer Time Clock</title>
+
+  <!-- Bootstrap -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.js"></script>
 </head>
 <body>
+
+  <div class="container-fluid">
+
+    <div class="row">
+        <div class="col-md-6">.col-md-6</div>
+        <div class="col-md-3">
+
+          <ul class="list-group">
+            <li class="list-group-item">Fajr</li>
+            <li class="list-group-item">Sunrise</li>
+            <li class="list-group-item">Dhuhr</li>
+            <li class="list-group-item">Asr</li>
+            <li class="list-group-item">Maghrib</li>
+            <li class="list-group-item">Isha</li>
+          </ul>
+
+        </div>
+        <div class="col-md-3">
+
+          <ul class="list-group">
+            <li class="list-group-item" id='fajr'>00:00 AM</li>
+            <li class="list-group-item" id='sunrise'>00:00 AM</li>
+            <li class="list-group-item" id='dhuhr'>00:00 PM</li>
+            <li class="list-group-item" id='asr'>00:00 PM</li>
+            <li class="list-group-item" id='maghrib'>00:00 PM</li>
+            <li class="list-group-item" id='isha'>00:00 PM</li>
+          </ul>
+
+        </div>
+    </div>
+
+  </div>
   Fajr <div id='fajr' style="display: inline-block;">00:00 AM</div><br />
   Sunrise <div id='sunrise' style="display: inline-block;">00:00 AM</div><br />
   Dhuhr <div id='dhuhr' style="display: inline-block;">00:00 AM</div><br />
@@ -70,5 +111,9 @@
     }
   });
 </script>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
