added styles.css, and new design

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     </div>
 
   </div>
-  Fajr <div id='fajr' style="display: inline-block;">00:00 AM</div><br />
+  <!--Fajr <div id='fajr' style="display: inline-block;">00:00 AM</div><br />
   Sunrise <div id='sunrise' style="display: inline-block;">00:00 AM</div><br />
   Dhuhr <div id='dhuhr' style="display: inline-block;">00:00 AM</div><br />
   Asr <div id='asr' style="display: inline-block;">00:00 AM</div><br />
   Maghrib <div id='maghrib' style="display: inline-block;">00:00 AM</div><br />
-  Isha <div id='isha' style="display: inline-block;">00:00 AM</div><br />
+  Isha <div id='isha' style="display: inline-block;">00:00 AM</div><br />-->
 
 <script>
   Papa.parse("data.csv", {
