--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-2">
 
-          <ul class="list-group text-justify" style="font-size:3em">
+          <ul class="list-group text-justify">
             <li class="list-group-item" id='fajr'>00:00 AM</li>
             <li class="list-group-item" id='sunrise'>00:00 AM</li>
             <li class="list-group-item" id='dhuhr'>00:00 PM</li>
