added checkTime(hour) for hourss display.

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
           }
         }
         checkHours(hour);
+        checkTime(hour);
 
         // using the salatId[i] to access each div and write the proper prayer time.
         document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes + " " + timeSuffix;
