--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         }
         checkHours(hour);
         checkTime(hour);
+        console.log(hour);
 
         // using the salatId[i] to access each div and write the proper prayer time.
         document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes + " " + timeSuffix;
