if function explicitly written, will this work?

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         }
         checkHours(hour);
         checkTime(hour);
-        console.log(hour);
+        if (hour < 10) {hour = "0" + hour};
 
         // using the salatId[i] to access each div and write the proper prayer time.
         document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes + " " + timeSuffix;
