wrong line deleted.

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
           }
         }
         checkHours(hour);
-        checkTime(hour);
         if (hour < 10) {hour = "0" + hour};
+        console.log(hour);
 
         // using the salatId[i] to access each div and write the proper prayer time.
         document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes + " " + timeSuffix;
