--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         h = checkHour(h);
         m = checkTime(m);
         s = checkTime(s);
+        var timeSuffix = "AM";
         document.getElementById('time').innerHTML =
         h + ":" + m + "<small class=\"text-muted\" style='font-size:.5em;'>:" + s + "</small>";
 
@@ -31,6 +32,7 @@
     }
     function checkHour(i) {
         if (i > 13) {i = i - 12}; // converting to 12 hour format
+        timeSuffix = "PM";
         return i;
     }
     function checkTime(i) {
