--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         s = checkTime(s);
         var timeSuffix = "AM";
         document.getElementById('time').innerHTML =
-        h + ":" + m + "<small class=\"text-muted\" style='font-size:.5em;'>:" + s + "</small>" + timeSuffix;
+        h + ":" + m + "<small class=\"text-muted\" style='font-size:.5em;'>:" + s + "</small>" + "<small>" + timeSuffix + "</small>";
 
         var options = {month: 'long', day: 'numeric', year: 'numeric'};
         document.getElementById('date').innerHTML = today.toLocaleDateString('en-US', options);
