--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     function startTime() {
         var today = new Date();
         var h = today.getHours();
-        console.log(h);
         var m = today.getMinutes();
         var s = today.getSeconds();
+        var timeSuffix = h >= 12 ? 'PM' : 'AM';
         h = checkHour(h);
         m = checkTime(m);
         s = checkTime(s);
-        var timeSuffix;
         document.getElementById('time').innerHTML =
         h + ":" + m + "<small class=\"text-muted\" style='font-size:.5em;'>:" + s + "</small>" + " <small style='font-size:0.6em'>" + timeSuffix + "</small>";
 
@@ -33,7 +32,6 @@
     }
     function checkHour(i) {
         if (i > 13) {i = i - 12}; // converting to 12 hour format
-        timeSuffix = "PM";
         return i;
     }
     function checkTime(i) {
