--- a/index2.html
+++ b/index2.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-  <title>Bosnian Islamic Centre Prayer Time Clock</title>
+  <title>Bosnian Islamic Centre | Prayer Clock</title>
 
   <!-- Bootstrap -->
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
-  <link href="styles.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles2.css">
+  <!-- PapaParse CDN || papaparse is used to extract the numbers for the days prayer times. -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.js"></script>
 
   <script>
@@ -23,10 +24,11 @@
         h = checkHour(h);
         m = checkTime(m);
         s = checkTime(s);
-        document.getElementById('time').innerHTML =
+        document.getElementById("time").innerHTML =
         h + ":" + m /*+ "<small class=\"text-muted\" style='font-size:.5em;'>:" + s */+ "</small>" + " <small style='font-size:0.6em'>" + timeSuffix + "</small>";
 
-        var options = {month: 'long', day: 'numeric', year: 'numeric'};
+        var options = {'weekday':'long', month: 'long', day: 'numeric', year: 'numeric'};
+        document.getElementById('islamicDate').innerHTML = today.toLocaleDateString('ar-SA-u-ca-islamic', options);
         document.getElementById('date').innerHTML = today.toLocaleDateString('en-US', options);
         var t = setTimeout(startTime, 500);
     }
@@ -41,81 +43,60 @@
   </script>
 </head>
 <body onload="startTime()">
-
   <div class="navbar navbar-default navbar-static-top">
-
-  <b>
-  <p class="col-md-6 text-left text-danger text-uppercase" style='font-size:3em'>Bosnian Islamic Centre</p>
-  <p id="date" class="col-md-6 text-right text-danger" style='font-size:3em'></p>
-  </b>
-
+    <span class="navbar-text"><b class="text-success">Bosnian Islamic Centre</b></span>
+    <span class="navbar-text"><b class="text-success" id="islamicDate">| Islamic Date Here |</b></span>
+    <span class="navbar-text"><b class="text-success" id="date">| Date Here |</b></span>
   </div>
+
+  <div class="well well-lg">These are ADs!</div>
 
   <div class="container-fluid">
-
     <div class="row">
-
-    <div class="col-md-1 bg-primary">hey</div>
-    <div class="col-md-1 bg-success">hey</div>
-    <div class="col-md-1 bg-info">hey</div>
-    <div class="col-md-1 bg-warning">hey</div>
-    <div class="col-md-1 bg-danger">hey</div>
-    <div class="col-md-1 bg-primary">hey</div>
-    <div class="col-md-1 bg-success">hey</div>
-    <div class="col-md-1 bg-info">hey</div>
-    <div class="col-md-1 bg-warning">hey</div>
-    <div class="col-md-1 bg-danger">hey</div>
-    <div class="col-md-1 bg-primary">hey</div>
-    <div class="col-md-1 bg-success">hey</div>
-
+      <div class="col-md-4 col-md-offset-4 panel panel-default">
+        <div class="panel-body text-center" id="time">5:10 PM</div>
+      </div>
     </div>
-    <div class="row">
-        <div class="col-md-6 text-right" id='time'>.col-md-6</div>
-
-        <div class="col-md-5 list-group">
-
-          <div class="col-md-3">
-            Fajr
-          </div>
-          <div class="col-md-2">
-            05:50 AM
-          </div>
-
+    <div class="row text-center">
+      <div class="col-md-2">
+        <div class="panel panel-primary">
+          <div class="panel-heading">Fajr</div>
+          <div class="panel-body" id="fajr">00:00 AM / PM</div>
         </div>
-
-        <div class="col-md-3 col-md-offset-1">
-
-          <strong><ul class="list-group">
-            <li class="list-group-item">Fajr</li>
-            <li class="list-group-item">Sunrise</li>
-            <li class="list-group-item">Dhuhr</li>
-            <li class="list-group-item">Asr</li>
-            <li class="list-group-item">Maghrib</li>
-            <li class="list-group-item">Isha</li>
-          </ul></strong>
-
+      </div>
+      <div class="col-md-2">
+        <div class="panel panel-success">
+          <div class="panel-heading">Shuruq</div>
+          <div class="panel-body" id="sunrise">00:00 AM / PM</div>
         </div>
-        <div class="col-md-2">
-
-          <ul class="list-group text-justify">
-            <li class="list-group-item" id='fajr'>00:00 AM</li>
-            <li class="list-group-item" id='sunrise'>00:00 AM</li>
-            <li class="list-group-item" id='dhuhr'>00:00 PM</li>
-            <li class="list-group-item" id='asr'>00:00 PM</li>
-            <li class="list-group-item" id='maghrib'>00:00 PM</li>
-            <li class="list-group-item" id='isha'>00:00 PM</li>
-          </ul>
-
+      </div>
+      <div class="col-md-2">
+        <div class="panel panel-primary">
+          <div class="panel-heading">Dhuhr</div>
+          <div class="panel-body" id="dhuhr">00:00 AM / PM</div>
         </div>
+      </div>
+      <div class="col-md-2">
+        <div class="panel panel-success">
+          <div class="panel-heading">Asr</div>
+          <div class="panel-body" id="asr">00:00 AM / PM</div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="panel panel-success">
+          <div class="panel-heading">Maghrib</div>
+          <div class="panel-body" id="maghrib">00:00 AM / PM</div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="panel panel-success">
+          <div class="panel-heading">Isha</div>
+          <div class="panel-body" id="isha">00:00 AM / PM</div>
+        </div>
+      </div>
     </div>
-
   </div>
-  <!--Fajr <div id='fajr' style="display: inline-block;">00:00 AM</div><br />
-  Sunrise <div id='sunrise' style="display: inline-block;">00:00 AM</div><br />
-  Dhuhr <div id='dhuhr' style="display: inline-block;">00:00 AM</div><br />
-  Asr <div id='asr' style="display: inline-block;">00:00 AM</div><br />
-  Maghrib <div id='maghrib' style="display: inline-block;">00:00 AM</div><br />
-  Isha <div id='isha' style="display: inline-block;">00:00 AM</div><br />-->
+
 
 <script>
   Papa.parse("data.csv", {
@@ -177,6 +158,8 @@
     }
   });
 </script>
+
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
