zoomed out when viewing the webpage, it's same locally and on server.

--- a/index2.html
+++ b/index2.html
@@ -99,7 +99,7 @@
 
 
 <script>
-  Papa.parse("dat.csv", {
+  Papa.parse("data.csv", {
     download: true,
     dynamicTyping: true,
     header: true,
