--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.js"></script>
 
   <script>
+    var DJHeading = ['Dhuhr', 'Jumua'], i = 0;
+    function changeDJ() {
+      i = (i > 0) ? 0 : 1;
+      document.getElementById('djcarousel').innerHTML = DJHeading[i];
+      setTimeout(changeDJ, 8000);
+    }
     function startTime() {
         var today = new Date();
         var h = today.getHours();
@@ -25,7 +31,7 @@
         m = checkTime(m);
         s = checkTime(s);
         document.getElementById("time").innerHTML =
-        h + ":" + m /*+ "<small class=\"text-muted\" style='font-size:.5em;'>:" + s */+ "</small>" + " <small style='font-size:0.6em'>" + timeSuffix + "</small>";
+        h + ":" + m + "<small class=\"text-muted\";'>:" + s + " " + timeSuffix + "</small>";
 
         var options = {'weekday':'long', month: 'long', day: 'numeric', year: 'numeric'};
         document.getElementById('islamicDate').innerHTML = today.toLocaleDateString('ar-SA-u-ca-islamic', options);
@@ -42,18 +48,22 @@
     }
   </script>
 </head>
-<body onload="startTime()">
+<body onload="startTime(); changeDJ();">
   <div class="navbar navbar-default navbar-static-top">
-    <span class="navbar-text"><b class="text-success">Bosnian Islamic Centre</b></span>
-    <span class="navbar-text"><b class="text-success" id="islamicDate">| Islamic Date Here |</b></span>
-    <span class="navbar-text"><b class="text-success" id="date">| Date Here |</b></span>
+    <div class="container-fluid">
+      <span class="navbar-text navbar-center"><b class="text-success">Bosnian Islamic Centre</b></span>
+      <span class="navbar-text navbar-right"><b class="label label-default" id="islamicDate">| Islamic Date Here |</b></span>
+      <span class="navbar-text navbar-right"><b class="label label-success" id="date">| Date Here |</b></span>
+    </div>
   </div>
 
-  <div class="well well-lg">These are ADs!</div>
+  <div class="well well-lg">
+    <p>These are ADs! Purchase space in the office. I need to add a third line.</p>
+  </div>
 
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-4 col-md-offset-4 panel panel-default">
+      <div class="col-md-6 col-md-offset-3 panel panel-default">
         <div class="panel-body text-center" id="time">5:10 PM</div>
       </div>
     </div>
@@ -61,37 +71,37 @@
       <div class="col-md-2">
         <div class="panel panel-primary">
           <div class="panel-heading">Fajr</div>
-          <div class="panel-body" id="fajr">00:00 AM / PM</div>
+          <div class="panel-body" id="fajr">00:00 AM</div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="panel panel-success">
           <div class="panel-heading">Shuruq</div>
-          <div class="panel-body" id="sunrise">00:00 AM / PM</div>
+          <div class="panel-body" id="sunrise">00:00 AM</div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="panel panel-primary">
-          <div class="panel-heading">Dhuhr</div>
-          <div class="panel-body" id="dhuhr">00:00 AM / PM</div>
+          <div class="panel-heading" id="djcarousel">Dhuhr</div>
+          <div class="panel-body" id="dhuhr">00:00 PM</div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="panel panel-success">
           <div class="panel-heading">Asr</div>
-          <div class="panel-body" id="asr">00:00 AM / PM</div>
+          <div class="panel-body" id="asr">00:00 PM</div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="panel panel-success">
           <div class="panel-heading">Maghrib</div>
-          <div class="panel-body" id="maghrib">00:00 AM / PM</div>
+          <div class="panel-body" id="maghrib">00:00 PM</div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="panel panel-success">
           <div class="panel-heading">Isha</div>
-          <div class="panel-body" id="isha">00:00 AM / PM</div>
+          <div class="panel-body" id="isha">00:00 PM</div>
         </div>
       </div>
     </div>
